--- a/socialEyem-web/src/main/webapp/resources/css/styles.css
+++ b/socialEyem-web/src/main/webapp/resources/css/styles.css
@@ -355,10 +355,25 @@ img {
     background-color: #e61f65;
 }
 .btn-action {
+    
     font-weight: bold;
     background: transparent!important;
     border: 1px solid #333;
     text-shadow: none;
+    display: inline-block;
+    padding: 6px 12px;
+    margin-bottom: 0;
+    font-size: 15px;
+    font-weight: normal;
+    line-height: 1.428571429;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    cursor: pointer;
+    border-radius: 2px;
+    -webkit-user-select: none;
+
+
 }
 .btn-action:hover,
 .btn-action:focus,
@@ -577,7 +592,7 @@ img {
 .entry-header .entry-meta {
     text-align: right;
     font-family: Georgia, serif;
-    font-size: 18px;
+    font-size: 30px;
     font-size: 1.125rem;
     font-style: italic;
     font-weight: normal;
