--- a/socialEyem-web/src/main/webapp/resources/css/styles.css
+++ b/socialEyem-web/src/main/webapp/resources/css/styles.css
@@ -701,7 +701,7 @@ footer.entry-meta .meta-in {
     font-style: italic;
     font-weight: normal;
     color: #a5a5a5;
-    margin: 0 0 8px 0;
+    margin: -15px 0 8px 0;
 }
 /*********************************************************************
  
