--- a/socialEyem-web/src/main/webapp/resources/css/styles.css
+++ b/socialEyem-web/src/main/webapp/resources/css/styles.css
@@ -703,6 +703,9 @@ footer.entry-meta .meta-in {
     color: #a5a5a5;
     margin: -15px 0 8px 0;
 }
+.postfooter{
+    text-align: right;
+}
 /*********************************************************************
  
 
