--- a/socialEyem-web/src/main/webapp/resources/css/styles.css
+++ b/socialEyem-web/src/main/webapp/resources/css/styles.css
@@ -102,18 +102,11 @@ a:hover {
 
 **********************************************************************/
 .contenidologin{
-    background: #f4f4f4 url(http://www.suescunpapel.com/content/2967/00938.jpg) top center;
+    background: #f4f4f4 url(http://animewall.biz/wp-content/uploads/2014/09/light-gray-grunge-background.jpg) top center;
     background-size: cover;
     color: #7C7C7C;
     padding: 30px 0 35px 0;
-
-
-
 }
-
-
-
-
 
 /*********************************************************************
  
@@ -123,7 +116,7 @@ a:hover {
 
 **********************************************************************/
 #head {
-    background: #f4f4f4 url(http://www.suescunpapel.com/content/2967/00938.jpg) top center;
+    background: #f4f4f4 url(http://animewall.biz/wp-content/uploads/2014/09/light-gray-grunge-background.jpg) top center;
     background-size: cover;
     color: #7C7C7C;
     padding: 30px 0 35px 0;
@@ -133,7 +126,7 @@ a:hover {
     width: 140px;
     height: 140px;
     overflow: hidden;
-    border: 9px solid rgba(0, 0, 0, 0.05);
+    border: 9px solid rgba(0, 0, 0, 0.17);
     margin: 0 auto;
 }
 #head .title {
@@ -315,6 +308,7 @@ img {
     -moz-background-clip: padding;
     border-radius: 50%;
     background-clip: padding-box;
+    margin: -10px 15px 0px 0px
 }
 .btn {
     font-size: 12px;
