--- a/socialEyem-web/src/main/webapp/resources/css/styles.css
+++ b/socialEyem-web/src/main/webapp/resources/css/styles.css
@@ -137,12 +137,11 @@ a:hover {
     margin-top: 0px;
     margin-bottom: 10px;
 }
-#verperfil img.img-circle2 {
+#verperfil img.img-circle {
     display: block;
-    width: 100px;
-    height: 100px;
+    width: 90px;
+    height: 90px;
     overflow: hidden;
-    border: 9px solid rgba(0, 0, 0, 0.17);
     margin: 0 auto;
 }
 #verperfil h1{
@@ -229,6 +228,18 @@ a:hover {
     margin: 0 auto;
     text-align: center;
 }
+.navbar-collapse .buscador {
+    float: right;
+    margin: -42px 75px 0px 0px;
+    text-align: left;
+    width: 15%;
+}
+.navbar-collapse .buscador2 {
+    float: right;
+    margin: -42px 85px 0px 0px;
+    text-align: left;
+}
+
 .navbar-collapse .navbar-nav > li {
     float: none;
     display: inline-block;
