--- a/socialEyem-web/src/main/webapp/resources/css/styles.css
+++ b/socialEyem-web/src/main/webapp/resources/css/styles.css
@@ -189,6 +189,10 @@ a:hover {
     font-size: 1rem;
     margin: 15px 0 0;
 }
+.cabeceragrupo{
+    align: center;
+    margin: 0px 20px 35px 20px;
+}
 /*********************************************************************
  
 
